# vertical-victory

./: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/training/: README.md  pyproject.toml
apps/training/five_towers/: __init__.py  env.py
apps/training/five_towers/agents/: __init__.py
apps/training/five_towers/game_logic/: __init__.py  deck.py  rules.py  scoring.py  state.py
apps/training/five_towers/game_logic/phases/: __init__.py  bidding.py  building.py
apps/training/five_towers/utils/: __init__.py  rewards.py
apps/training/scripts/: evaluate_agent.py  train_ppo.py
apps/training/tests/: __init__.py  test_game_logic.py
